- Updated the flags of Broken Shard of Horror to allow every member of a group to loot it.
- Updated the flags of Broken Shard of Despair to allow every member of a group to loot it.
- Updated the flags of Broken Shard of Suffering to allow every member of a group to loot it.

[2022-05-13]
- Added Charred Wreckage to the loot table of Savage Hill Scavenger for the quest Clean Up.
- Updated the flags of Charred Wreckage to allow every member of a group to loot it.

[2022-05-14]
- Added K3 Equipment to the loot table of Sifreldar Storm Maiden for the quest Equipment Recovery.
- Added K3 Equipment to the loot table of Sifreldar Runekeeper for the quest Equipment Recovery.
- Updated the flags of K3 Equipment to allow every member of a group to loot it.
- Updated the respawn time of Sparksocket's Tools.
- Added Hearty Mammoth Meat to the loot table of Ironwool Mammoth for the quest Ample Inspiration.
- Updated the flags of Hearty Mammoth Meat to allow every member of a group to loot it.
- Updated the respawn time of Transporter Power Cell.

[2022-05-21]
- Updated the flags of Lean Wolf Flank to allow every member of a group to loot it.

[2022-05-22]
- Updated the flags of Jungle Remedy to allow every member of a group to loot it.
- Update the respawn time of Kurzen Supplies.
- Updated the respawn time of Fall of Gurubashi.
- Updated the respawn time of The Emperor's Tomb.
- Updated the respawn time of Moon Over the Vale.
- Updated the respawn time of Bloodsail Charts.
- Updated the respawn time of Bloodsail Orders.

[2022-05-26]
- Updated the flags of Troll Tribal Necklace to allow every member of a group to loot it.

[2022-05-29]
- Updated the respawn time of First Relic Fragment.
- Updated the respawn time of Second Relic Fragment.
- Updated the respawn time of Third Relic Fragment.
- Updated the respawn time of Fourth Relic Fragment.

[2022-05-30]
- Updated the respawn time of Ikeyen's Belongings.